@@ -1,3 +1,8 @@
+Mon Jul 26 09:31:39 BST 2004 (njh)
+----------------------------------
+  * libclamav/message.c:	Fix occasional crash when scanning
+  	multipart within multipart e-mails
+
 Sun Jul 25 12:52:07 BST 2004 (njh)
 ----------------------------------
   * clamav-milter:	Fixed warning message when building on FreeBSD4.9
